html-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: html-service
spec:
  type: LoadBalancer
  selector:
    name: html-loadbalancer
  ports:
    - port: 80
      targetPort: 80
