html-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: htmlservice-ingress
spec:
  selector:
    name: htmlcv-ingress
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: htmlnets-ingress
  labels:
    name: htmlnets-ingress
spec:
  rules:
    - host: musyahid.cv.local
      http:
        paths:
          - path: /
            backend:
              serviceName: htmlservice-ingress
              servicePort: 80
